<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1">

        <Space
            android:layout_weight="0.85"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/edit_text"
            android:textSize="10sp"
            android:gravity="center"
            />




    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="0.01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <ImageView
            android:id="@+id/picture_imageView"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/profile_picture"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Space
                android:layout_weight="0.1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/name_textView"
                android:layout_weight="0.35"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/student_name"/>

            <Space
                android:layout_weight="0.1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/department_textView"
                android:layout_weight="0.35"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/student_department"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes_text" />

    <ScrollView
        android:layout_weight="0.3"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <EditText
            android:id="@+id/note_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"/>

        </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/finish_text"/>

        <TextView
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/project_name_text"/>

        <TextView
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/due_date_text"/>

    </LinearLayout>

    <ListView
        android:id="@+id/projects_listView"
        android:layout_weight="0.7"
        android:layout_width="match_parent"
        android:layout_height="0dp"></ListView>

</LinearLayout>
