<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/picture_imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/profile_picture"
        android:contentDescription="@string/profile_picture"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/name_textView"
            android:layout_weight="0.6"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/student_name"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"            />

        <TextView
            android:id="@+id/department_textView"
            android:layout_weight="0.4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/student_department"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"/>
    </LinearLayout>







</LinearLayout>
